force-app/main/default/objects/Krow__Task_Link__c/Krow__Task_Link__c.object-meta.xml
<CustomObject>
    <label>Klient Task Link</label>
    <nameField>
        <displayFormat>TL-{0000}</displayFormat>
        <label>Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Klient Task Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>