force-app/main/default/objects/Krow__Task_Link__c/fields/Krow__Lag_Days__c.field-meta.xml
<CustomField>
    <fullName>Krow__Lag_Days__c</fullName>
    <label>Lag Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>