force-app/main/default/objects/Krow__Task_Link__c/fields/Krow__Source_Task__c.field-meta.xml
<CustomField>
    <fullName>Krow__Source_Task__c</fullName>
    <label>Source Task</label>
    <referenceTo>Krow__Task__c</referenceTo>
    <relationshipLabel>Klient Task Links</relationshipLabel>
    <relationshipName>Source_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>