force-app/main/default/objects/Krow__Task_Link__c/fields/Krow__Target_Task__c.field-meta.xml
<CustomField>
    <fullName>Krow__Target_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Task</label>
    <referenceTo>Krow__Task__c</referenceTo>
    <relationshipLabel>Klient Task Links (Target Task)</relationshipLabel>
    <relationshipName>Target_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>