force-app/main/default/objects/Krow__Task_Link__c/fields/Krow__Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Type__c</fullName>
    <description>0- finish to start 
1- start to start 
2- finish to finish
3- start to finish</description>
    <inlineHelpText>0- finish to start 
1- start to start 
2- finish to finish</inlineHelpText>
    <label>Type</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>